Fix home options items alignment
Closes civio/presupuesto-management#698

--- a/budget_app/static/stylesheets/_home.scss
+++ b/budget_app/static/stylesheets/_home.scss
@@ -73,8 +73,9 @@
       @else {
         @extend .col-sm-6;
       }
-
-      @if $dvmi-menu-length == 5 {
+  
+      // clear odd items
+      @if $dvmi-menu-length >= 4 {
         &:nth-child(odd){
           clear: both;
         }
